Fixed alignment of header title with center regions of all tabs and landing page content.

--- a/web-app/css/IMOS.css
+++ b/web-app/css/IMOS.css
@@ -39,11 +39,7 @@ h2 {
     margin-bottom: 14px;
 }
 
-#landing {
-    width: 780px;
-    margin: 20px 0 0 190px;
-    padding: 20px;
-}
+
 
 #landingBigButton {
     background: #ffba66; /* Old browsers */
@@ -54,7 +50,6 @@ h2 {
     background: -ms-linear-gradient(top, #ffba66 60%, #ffd29f 100%); /* IE10+ */
     background: linear-gradient(to bottom, #ffba66 60%, #ffd29f 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffba66', endColorstr='#ffd29f', GradientType=0); /* IE6-9 */
-
     margin-top: 2px;
     display: inline-block;
     color: #212121;
@@ -69,7 +64,6 @@ h2 {
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
     box-shadow: 3px 3px 4px #cccccc;
     font-size: 16px;
-
 }
 
 #landingMain {
@@ -112,12 +106,9 @@ cart-title,
 }
 
 #header {
-
     z-index: 300;
-    height: 105;
     width: 100%;
     box-shadow: 2px 2px 5px rgba(50, 50, 50, 0.75);
-
     background: #3b3e41; /* Old browsers */
     background: -moz-linear-gradient(left, #3b3e41 0%, #565a5e 23%, #5a5e62 49%, #3b3e41 100%, #0f0f0f 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right top, color-stop(0%, #3b3e41), color-stop(23%, #565a5e), color-stop(49%, #5a5e62), color-stop(100%, #3b3e41), color-stop(100%, #0f0f0f)); /* Chrome,Safari4+ */
@@ -136,8 +127,6 @@ cart-title,
 #headerTitle {
     color: #60AFdd;
     font-size: 24px;
-    margin-left: 190px;
-    padding: 55px 5px 35px 20px;
 }
 
 #toplinks {
@@ -173,7 +162,6 @@ cart-title,
     border: none;
     background-color: #484848;
     background-image: none;
-
     background: #484848; /* Old browsers */
     background: -moz-linear-gradient(left, #484848 0%, #484848 51%, #3a3a3a 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right top, color-stop(0%, #484848), color-stop(51%, #484848), color-stop(100%, #3a3a3a)); /* Chrome,Safari4+ */
@@ -182,7 +170,6 @@ cart-title,
     background: -ms-linear-gradient(left, #484848 0%, #484848 51%, #3a3a3a 100%); /* IE10+ */
     background: linear-gradient(to right, #484848 0%, #484848 51%, #3a3a3a 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#484848', endColorstr='#3a3a3a', GradientType=1); /* IE6-9 */
-
 }
 
 p {
@@ -193,7 +180,6 @@ h1 {
     font-size: 18px;
     font-weight: bold;
 }
-
 
 h5 {
     color: #6A6A6A;
@@ -208,7 +194,6 @@ hr {
     height: 1px;
     margin-top: 15px;
     margin-bottom: 25px;
-
 }
 
 input, select, textarea {
@@ -220,7 +205,6 @@ input, select, textarea {
     padding: 2px 4px;
     border-radius: 3px 3px 3px 3px;
     /*box-shadow: 2px 2px 3px 0 #EEEEEE;*/
-
 }
 
 #mapActionsWindow.x-window {
